# rabbitmq-server

./: .bazelignore  .bazelrc  .dockerignore  .elp.toml  .git-blame-ignore-revs  .gitignore  .hgignore  .mailmap  .travis.sh  .travis.yml  .travis.yml.patch  AGENTS.md  BAZEL.md  BUILD.bats  BUILD.bazel  BUILD.cowboy  BUILD.credentials_obfuscation  BUILD.cuttlefish  BUILD.goldrush  BUILD.in  BUILD.inet_tcp_proxy  BUILD.jose  BUILD.khepri  BUILD.lager  BUILD.osiris  BUILD.package_generic_unix  BUILD.proper  BUILD.ra  BUILD.rabbitmq_ct_helpers  BUILD.ranch  BUILD.redbug  BUILD.stdout_formatter  BUILD.systemd  BUILD.trust_store_http  COMMUNITY_SUPPORT.md  CONTRIBUTING.md  Dockerfile  Emakefile  INSTALL  INSTALL.in  (+64 more)
apps/amqp_client/: .gitignore  BUILD.bazel  Makefile
apps/amqp_client/include/: amqp_client_internal.hrl
apps/amqp_client/src/: amqp_connection.erl  amqp_connection_type_sup.erl  amqp_gen_connection.erl  amqp_rpc_server.erl  overview.edoc.in  rabbit_routing_util.erl  uri_parser.erl
apps/rabbitmq_amqp1_0/: BUILD.bazel  Makefile
apps/rabbitmq_amqp1_0/priv/schema/: rabbitmq_amqp1_0.schema
apps/rabbitmq_amqp1_0/src/: rabbit_amqp1_0_message.erl  rabbit_amqp1_0_util.erl
apps/rabbitmq_amqp1_0/test/: system_SUITE.erl  unit_SUITE.erl
apps/rabbitmq_auth_backend_cache/: BUILD.bazel  CONTRIBUTING.md  Makefile
apps/rabbitmq_auth_backend_cache/priv/schema/: rabbitmq_auth_backend_cache.schema
apps/rabbitmq_auth_backend_cache/src/: rabbit_auth_backend_cache.erl  rabbit_auth_backend_cache_app.erl  rabbit_auth_cache_ets.erl  rabbit_auth_cache_ets_segmented.erl
apps/rabbitmq_auth_backend_cache/test/config_schema_SUITE_data/: rabbitmq_auth_backend_cache.snippets
apps/rabbitmq_auth_mechanism_ssl/: BUILD.bazel  Makefile  README.md
apps/rabbitmq_aws/: .gitignore  BUILD.bazel  Makefile  README.md
apps/rabbitmq_aws/src/: rabbitmq_aws.erl  rabbitmq_aws_app.erl  rabbitmq_aws_sup.erl  rabbitmq_aws_urilib.erl
apps/rabbitmq_aws/test/src/: rabbitmq_aws_app_tests.erl
apps/rabbitmq_codegen/: BUILD.bazel  LICENSE  amqp_codegen.py
apps/rabbitmq_jms_topic_exchange/: BUILD.bazel  Makefile
apps/rabbitmq_jms_topic_exchange/include/: rabbit_jms_topic_exchange.hrl
apps/rabbitmq_jms_topic_exchange/src/: rabbit_jms_topic_exchange.erl  sjx_evaluator.erl
apps/rabbitmq_prelaunch/: .gitignore  BUILD.bazel  Makefile
apps/rabbitmq_prelaunch/src/: rabbit_boot_state.erl  rabbit_boot_state_sup.erl  rabbit_boot_state_systemd.erl  rabbit_logger_json_fmt.erl  rabbit_prelaunch.erl  rabbit_prelaunch_app.erl  rabbit_prelaunch_conf.erl  rabbit_prelaunch_dist.erl  rabbit_prelaunch_early_logging.erl  rabbit_prelaunch_errors.erl  rabbit_prelaunch_plugins.erl  rabbit_prelaunch_sighandler.erl  rabbit_prelaunch_sup.erl
apps/rabbitmq_prometheus/: .autocomplete  .gitignore  BUILD.bazel  Makefile
apps/rabbitmq_prometheus/docker/: docker-entrypoint.sh  erlang.cookie  rabbitmq-dist-metrics-definitions.json  rabbitmq-dist-metrics.conf  rabbitmq-overview.conf  rabbitmq-qq-env.conf  rabbitmq-qq.conf  rabbitmq-ssl_dist.config
apps/rabbitmq_prometheus/docker/grafana/: dashboards.yml  datasources.yml
apps/rabbitmq_prometheus/docker/rabbitmq-ssl/: client_key.p12  client_key.pem  server_certificate.pem  server_key.pem
apps/rabbitmq_prometheus/src/: rabbit_prometheus_handler.erl
apps/rabbitmq_prometheus/test/: rabbit_prometheus_http_SUITE.erl
apps/rabbitmq_random_exchange/: BUILD.bazel  LICENSE  Makefile
apps/rabbitmq_random_exchange/src/: rabbit_exchange_type_random.erl
apps/rabbitmq_sharding/: .gitignore  .hgignore  .travis.yml  BUILD.bazel  Makefile
apps/rabbitmq_sharding/etc/: rabbit-hare.config  rkey.sh
apps/rabbitmq_sharding/src/: rabbit_sharding_exchange_type_modulus_hash.erl  rabbit_sharding_util.erl
apps/rabbitmq_shovel_management/: .gitignore  BUILD.bazel  Makefile  README.md
apps/rabbitmq_stream_common/: BUILD.bazel  Makefile  README.adoc
apps/rabbitmq_stream_common/include/: rabbit_stream.hrl
apps/rabbitmq_stream_common/src/: rabbit_stream_core.erl
apps/rabbitmq_stream_common/test/: rabbit_stream_core_SUITE.erl
apps/rabbitmq_top/: .gitignore  .travis.yml  BUILD.bazel  Makefile
apps/rabbitmq_top/src/: rabbit_top_sup.erl  rabbit_top_wm_process.erl
apps/rabbitmq_tracing/: .gitignore  BUILD.bazel  Makefile
apps/rabbitmq_tracing/src/: rabbit_tracing_mgmt.erl  rabbit_tracing_wm_file.erl
apps/rabbitmq_tracing/test/: rabbit_tracing_SUITE.erl
apps/rabbitmq_web_mqtt/: .gitignore  BUILD.bazel  LICENSE  Makefile
apps/rabbitmq_web_mqtt/priv/schema/: rabbitmq_web_mqtt.schema
apps/rabbitmq_web_mqtt/src/: rabbit_web_mqtt_app.erl  rabbit_web_mqtt_middleware.erl  rabbit_web_mqtt_stream_handler.erl
apps/rabbitmq_web_mqtt/test/config_schema_SUITE_data/: rabbitmq_web_mqtt.snippets
bazel/elixir/: BUILD.bazel  elixir.bzl  elixir_as_app.bzl  elixir_build.bzl  elixir_bytecode.bzl  elixir_escript_main.bzl  elixir_escript_main.exs  elixir_toolchain.bzl  iex_eval.bzl  mix_archive_build.bzl  mix_archive_extract.bzl
bazel/toolchains/: BUILD.bazel
bazel/util/: BUILD.bazel  ct_logdir_vars.bzl
bazel_erlang/: BUILD.bazel  app_file.template  app_with_mod_file.template  bazel_erlang_app.bzl  bazel_erlang_lib.bzl  ct.bzl  elixir_home.bzl  erlang_home.bzl  erlang_version.bzl  escript.bzl  ez.bzl
mk/: bazel.mk  (+4 more)
packaging/base-image/: .dockerignore  BUILD.bazel  Dockerfile
packaging/docker-image/: .dockerignore  .gitignore  10-default-guest-user.conf  10-defaults.conf  20-management_agent.disable_metrics_collector.conf  BUILD.bazel  Dockerfile  Makefile  build_install_openssl.sh  build_install_otp.sh  docker-entrypoint.sh  install_rabbitmq.sh  rabbitmq.conf
packaging/docker-image/otp-versions/: otp-max.yaml  otp-min.yaml  otp-rc.yaml
packaging/docker-image/test_configs/: openssl_ubuntu.yaml  otp_ubuntu.yaml  rabbitmq_ubuntu.yaml
rabbitmq-cli-rust/: Cargo.toml  README.md
rabbitmq-cli-rust/examples/: custom_command.rs
rabbitmq-cli-rust/src/: cli.rs  context.rs  error.rs  main.rs  terminal.rs  transport.rs
tools/: BUILD.bazel  compare_dist.sh  erlang_app_equal  erlang_ls.bzl
(+2431 files in other folders)
