module(
    name = "rabbitmq-server",
    version = "3.13.0",
)

bazel_dep(
    name = "rules_pkg",
    version = "0.9.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.4.2",
)

bazel_dep(
    name = "platforms",
    version = "0.0.6",
)

bazel_dep(
    name = "rules_cc",
    version = "0.0.2",
)

bazel_dep(
    name = "gazelle",
    version = "0.33.0",
    repo_name = "bazel_gazelle",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.12.0",
)

bazel_dep(
    name = "com_github_rabbitmq_looking_glass",
    version = "0.2.1",
    dev_dependency = True,
    repo_name = "looking_glass",
)

bazel_dep(
    name = "rabbitmq_osiris",
    version = "1.6.7",
    repo_name = "osiris",
)

bazel_dep(
    name = "rabbitmq_ra",
    version = "2.7.0",
    repo_name = "ra",
)

bazel_dep(
    name = "rabbitmq_seshat",
    version = "0.6.1",
    repo_name = "seshat",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)

erlang_config.internal_erlang_from_github_release(
    name = "24",
    sha256 = "8444ff9abe23aea268adbb95463561fc222c965052d35d7c950b17be01c3ad82",
    version = "24.3.4.6",
)

erlang_config.internal_erlang_from_github_release(
    name = "25_0",
    sha256 = "8fc707f92a124b2aeb0f65dcf9ac8e27b2a305e7bcc4cc1b2fdf770eec0165bf",
    version = "25.0.4",
)

erlang_config.internal_erlang_from_github_release(
    name = "25_1",
    sha256 = "1cd2fbe225a412009cda9b1fd9f3fff0293e75e3020daa48abf68721471e91eb",
    version = "25.1.2.1",
)

erlang_config.internal_erlang_from_github_release(
    name = "25_2",
    sha256 = "f4d9f11d67ba478a053d72e635a44722a975603fe1284063fdf38276366bc61c",
    version = "25.2.3",
)

erlang_config.internal_erlang_from_github_release(
    name = "25_3",
    sha256 = "14f519bb63f9cc8d1db62ef7c58abc56fa94f8f76d918d23acad374f38434088",
    version = "25.3.2.6",
)

erlang_config.internal_erlang_from_github_release(
    name = "26_1",
    sha256 = "30de56e687cef15c73ef2e2e5bc8a94d28f959656e716e0a65092af7d360af57",
    version = "26.1.1",
)

erlang_config.internal_erlang_from_http_archive(
    name = "git_master",
    strip_prefix = "otp-master",
    url = "https://github.com/erlang/otp/archive/refs/heads/master.tar.gz",
    version = "27",
)

use_repo(
    erlang_config,
    "erlang_config",
)

elixir_config = use_extension(
    "//bazel/bzlmod:extensions.bzl",
    "elixir_config",
)

elixir_config.internal_elixir_from_github_release(
    name = "1_13",
    sha256 = "95daf2dd3052e6ca7d4d849457eaaba09de52d65ca38d6933c65bc1cdf6b8579",
    version = "1.13.4",
)

elixir_config.internal_elixir_from_github_release(
    name = "1_14",
    sha256 = "2ea249566c67e57f8365ecdcd0efd9b6c375f57609b3ac2de326488ac37c8ebd",
    version = "1.14.5",
)

elixir_config.internal_elixir_from_github_release(
    name = "1_15",
    sha256 = "385fc1958bcf9023a748acf8c42179a0c6123c89744396840bdcd661ee130177",
    version = "1.15.6",
)

use_repo(
    elixir_config,
    "elixir_config",
)

register_toolchains(
    "@erlang_config//24:toolchain_major",
    "@erlang_config//24:toolchain_major_minor",
    "@erlang_config//25_0:toolchain_major",
    "@erlang_config//25_0:toolchain_major_minor",
    "@erlang_config//25_1:toolchain_major",
    "@erlang_config//25_1:toolchain_major_minor",
    "@erlang_config//25_2:toolchain_major",
    "@erlang_config//25_2:toolchain_major_minor",
    "@erlang_config//25_3:toolchain_major",
    "@erlang_config//25_3:toolchain_major_minor",
    "@erlang_config//26_1:toolchain_major",
    "@erlang_config//26_1:toolchain_major_minor",
    "@erlang_config//git_master:toolchain_major",
    "@erlang_config//git_master:toolchain_major_minor",
    "@elixir_config//external:toolchain",
    "@elixir_config//1_13:toolchain",
    "@elixir_config//1_14:toolchain",
    "@elixir_config//1_15:toolchain",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "accept",
    build_file = "@rabbitmq-server//bazel:BUILD.accept",
    sha256 = "11b18c220bcc2eab63b5470c038ef10eb6783bcb1fcdb11aa4137defa5ac1bb8",
    version = "0.3.5",
)

erlang_package.hex_package(
    name = "aten",
    build_file = "@rabbitmq-server//bazel:BUILD.aten",
    sha256 = "64d40a8cf0ddfea4e13af00b7327f0925147f83612d0627d9506cbffe90c13ef",
    version = "0.5.8",
)

erlang_package.hex_package(
    name = "base64url",
    build_file = "@rabbitmq-server//bazel:BUILD.base64url",
    sha256 = "f9b3add4731a02a9b0410398b475b33e7566a695365237a6bdee1bb447719f5c",
    version = "1.0.1",
)

erlang_package.hex_package(
    name = "cowboy",
    build_file = "@rabbitmq-server//bazel:BUILD.cowboy",
    patch_cmds = [
        "rm ebin/cowboy.app",
    ],
    sha256 = "3afdccb7183cc6f143cb14d3cf51fa00e53db9ec80cdcd525482f5e99bc41d6b",
    version = "2.10.0",
)

erlang_package.hex_package(
    name = "cowlib",
    build_file = "@rabbitmq-server//bazel:BUILD.cowlib",
    patch_cmds = [
        "rm ebin/cowlib.app",
    ],
    sha256 = "163b73f6367a7341b33c794c4e88e7dbfe6498ac42dcd69ef44c5bc5507c8db0",
    version = "2.12.1",
)

erlang_package.hex_package(
    name = "credentials_obfuscation",
    build_file = "@rabbitmq-server//bazel:BUILD.credentials_obfuscation",
    sha256 = "738ace0ed5545d2710d3f7383906fc6f6b582d019036e5269c4dbd85dbced566",
    version = "3.4.0",
)

erlang_package.hex_package(
    name = "csv",
    build_file = "@rabbitmq-server//bazel:BUILD.csv",
    sha256 = "cbbe5455c93df5f3f2943e995e28b7a8808361ba34cf3e44267d77a01eaf1609",
    version = "3.0.5",
)

erlang_package.hex_package(
    name = "cuttlefish",
    build_file = "@rabbitmq-server//bazel:BUILD.cuttlefish",
    sha256 = "d3ef90bd2f5923477ab772fbda5cd5ad088438e4fd56801b455b87ada9f46fa3",
    version = "3.1.0",
)

erlang_package.hex_package(
    name = "eetcd",
    build_file = "@rabbitmq-server//bazel:BUILD.eetcd",
    sha256 = "66493bfd6698c1b6baa49679034c3def071ff329961ca1aa7b1dee061c2809af",
    version = "0.3.6",
)

erlang_package.hex_package(
    name = "enough",
    build_file = "@rabbitmq-server//bazel:BUILD.enough",
    sha256 = "0460c7abda5f5e0ea592b12bc6976b8a5c4b96e42f332059cd396525374bf9a1",
    version = "0.1.0",
)

erlang_package.hex_package(
    name = "gen_batch_server",
    build_file = "@rabbitmq-server//bazel:BUILD.gen_batch_server",
    sha256 = "c3e6a1a2a0fb62aee631a98cfa0fd8903e9562422cbf72043953e2fb1d203017",
    version = "0.8.8",
)

erlang_package.hex_package(
    name = "getopt",
    build_file = "@rabbitmq-server//bazel:BUILD.getopt",
    sha256 = "a0029aea4322fb82a61f6876a6d9c66dc9878b6cb61faa13df3187384fd4ea26",
    version = "1.0.2",
)

erlang_package.hex_package(
    name = "gun",
    build_file = "@rabbitmq-server//bazel:BUILD.gun",
    sha256 = "3106ce167f9c9723f849e4fb54ea4a4d814e3996ae243a1c828b256e749041e0",
    version = "1.3.3",
)

erlang_package.git_package(
    name = "horus",
    build_file = "@rabbitmq-server//bazel:BUILD.horus",
    commit = "253f9af23e539b7370a5105df19dcbb66762b247",
    repository = "rabbitmq/horus",
)

erlang_package.git_package(
    name = "jose",
    build_file = "@rabbitmq-server//bazel:BUILD.jose",
    commit = "d63c1c5c8f9c1a4f1438e234b886de8607a0034e",
    repository = "michaelklishin/erlang-jose",
)

erlang_package.hex_package(
    name = "json",
    build_file = "@rabbitmq-server//bazel:BUILD.json",
    sha256 = "9abf218dbe4ea4fcb875e087d5f904ef263d012ee5ed21d46e9dbca63f053d16",
    version = "1.4.1",
)

erlang_package.git_package(
    name = "khepri",
    build_file = "@rabbitmq-server//bazel:BUILD.khepri",
    commit = "952a52969eaa97a4327806b4fc062238dc3e6214",
    repository = "rabbitmq/khepri",
)

erlang_package.git_package(
    name = "khepri_mnesia_migration",
    build_file = "@rabbitmq-server//bazel:BUILD.khepri_mnesia_migration",
    commit = "ec891800b449f6a8fc975f959447039b3df343ed",
    repository = "rabbitmq/khepri_mnesia_migration",
)

erlang_package.hex_package(
    name = "thoas",
    build_file = "@rabbitmq-server//bazel:BUILD.thoas",
    sha256 = "fc763185b932ecb32a554fb735ee03c3b6b1b31366077a2427d2a97f3bd26735",
    version = "1.0.0",
)

erlang_package.hex_package(
    name = "observer_cli",
    build_file = "@rabbitmq-server//bazel:BUILD.observer_cli",
    sha256 = "a41b6d3e11a3444e063e09cc225f7f3e631ce14019e5fbcaebfda89b1bd788ea",
    version = "1.7.3",
)

erlang_package.hex_package(
    name = "prometheus",
    build_file = "@rabbitmq-server//bazel:BUILD.prometheus",
    sha256 = "2a99bb6dce85e238c7236fde6b0064f9834dc420ddbd962aac4ea2a3c3d59384",
    version = "4.10.0",
)

erlang_package.hex_package(
    name = "quantile_estimator",
    build_file = "@rabbitmq-server//bazel:BUILD.quantile_estimator",
    sha256 = "282a8a323ca2a845c9e6f787d166348f776c1d4a41ede63046d72d422e3da946",
    version = "0.2.1",
)

erlang_package.hex_package(
    name = "ra_alt",
    build_file = "@rabbitmq-server//bazel:BUILD.ra",
    pkg = "ra",
    sha256 = "f4dd317ab4030c0b14453bcf70179130f388dec35f7d59b6c7edcdfa25270397",
    version = "2.7.0",
)

erlang_package.hex_package(
    name = "seshat_alt",
    build_file = "@rabbitmq-server//bazel:BUILD.seshat",
    pkg = "seshat",
    sha256 = "7cef700f92831dd7cae6a6dd223ccc55ac88ecce0631ee9ab0f2b5fb70e79b90",
    version = "0.6.0",
)

erlang_package.hex_package(
    name = "ranch",
    build_file = "@rabbitmq-server//bazel:BUILD.ranch",
    patch_cmds = [
        "rm ebin/ranch.app",
    ],
    sha256 = "244ee3fa2a6175270d8e1fc59024fd9dbc76294a321057de8f803b1479e76916",
    version = "2.1.0",
)

erlang_package.hex_package(
    name = "recon",
    build_file = "@rabbitmq-server//bazel:BUILD.recon",
    sha256 = "6c6683f46fd4a1dfd98404b9f78dcabc7fcd8826613a89dcb984727a8c3099d7",
    version = "2.5.3",
)

erlang_package.hex_package(
    name = "redbug",
    build_file = "@rabbitmq-server//bazel:BUILD.redbug",
    sha256 = "3624feb7a4b78fd9ae0e66cc3158fe7422770ad6987a1ebf8df4d3303b1c4b0c",
    version = "2.0.7",
)

erlang_package.hex_package(
    name = "stdout_formatter",
    build_file = "@rabbitmq-server//bazel:BUILD.stdout_formatter",
    sha256 = "51f1df921b0477275ea712763042155dbc74acc75d9648dbd54985c45c913b29",
    version = "0.2.4",
)

erlang_package.git_package(
    build_file = "@rabbitmq-server//bazel:BUILD.syslog",
    repository = "schlagert/syslog",
    tag = "4.0.0",
)

erlang_package.hex_package(
    name = "sysmon_handler",
    build_file = "@rabbitmq-server//bazel:BUILD.sysmon_handler",
    sha256 = "922cf0dd558b9fdb1326168373315b52ed6a790ba943f6dcbd9ee22a74cebdef",
    version = "1.3.0",
)

erlang_package.hex_package(
    name = "systemd",
    build_file = "@rabbitmq-server//bazel:BUILD.systemd",
    sha256 = "8ec5ed610a5507071cdb7423e663e2452a747a624bb8a58582acd9491ccad233",
    version = "0.6.1",
)

use_repo(
    erlang_package,
    "accept",
    "aten",
    "base64url",
    "cowboy",
    "cowlib",
    "credentials_obfuscation",
    "csv",
    "cuttlefish",
    "eetcd",
    "gen_batch_server",
    "getopt",
    "gun",
    "horus",
    "jose",
    "json",
    "khepri",
    "khepri_mnesia_migration",
    "observer_cli",
    "prometheus",
    "ra_alt",
    "ranch",
    "recon",
    "redbug",
    "seshat_alt",
    "stdout_formatter",
    "syslog",
    "sysmon_handler",
    "systemd",
    "thoas",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_dev_package.hex_package(
    name = "amqp",
    build_file = "@rabbitmq-server//bazel:BUILD.amqp",
    patch_args = ["-p1"],
    patches = ["@rabbitmq-server//bazel:amqp.patch"],
    sha256 = "b6d926770e4508e30e3e9e476c57b6c8aeda44f7715663bdc38935620ce5be6f",
    version = "2.1.1",
)

erlang_dev_package.git_package(
    branch = "master",
    build_file = "@//:bazel/BUILD.ct_helper",
    repository = "ninenines/ct_helper",
)

erlang_dev_package.hex_package(
    name = "dialyxir",
    build_file = "@rabbitmq-server//bazel:BUILD.dialyxir",
    sha256 = "6c32a70ed5d452c6650916555b1f96c79af5fc4bf286997f8b15f213de786f73",
    version = "0.5.1",
)

erlang_dev_package.git_package(
    name = "emqtt",
    branch = "master",
    build_file = "@rabbitmq-server//bazel:BUILD.emqtt",
    repository = "rabbitmq/emqtt",
)

erlang_dev_package.git_package(
    name = "inet_tcp_proxy_dist",
    testonly = True,
    branch = "master",
    repository = "rabbitmq/inet_tcp_proxy",
)

erlang_dev_package.git_package(
    branch = "master",
    build_file = "@rabbitmq-server//bazel:BUILD.meck",
    repository = "eproxus/meck",
)

erlang_dev_package.git_package(
    branch = "master",
    build_file = "@rabbitmq-server//bazel:BUILD.proper",
    repository = "manopapad/proper",
)

erlang_dev_package.hex_package(
    name = "temp",
    build_file = "@rabbitmq-server//bazel:BUILD.temp",
    sha256 = "6af19e7d6a85a427478be1021574d1ae2a1e1b90882586f06bde76c63cd03e0d",
    version = "0.4.7",
)

erlang_dev_package.hex_package(
    name = "x509",
    build_file = "@rabbitmq-server//bazel:BUILD.x509",
    sha256 = "3604125d6a0171da6e8a935810b58c999fccab0e3d20b2ed28d97fa2d9e2f6b4",
    version = "0.8.7",
)

use_repo(
    erlang_dev_package,
    "amqp",
    "ct_helper",
    "dialyxir",
    "emqtt",
    "inet_tcp_proxy_dist",
    "meck",
    "proper",
    "temp",
    "x509",
)

rbe = use_extension(
    "//bazel/bzlmod:extensions.bzl",
    "rbe",
)

rbe.git_repository(
    branch = "linux-rbe",
    remote = "https://github.com/rabbitmq/rbe-erlang-platform.git",
)

use_repo(
    rbe,
    "rbe",
)

secondary_umbrella = use_extension(
    "//bazel/bzlmod:extensions.bzl",
    "secondary_umbrella",
    dev_dependency = True,
)

use_repo(
    secondary_umbrella,
    "rabbitmq-server-generic-unix-3.12",
)

hex = use_extension(
    "//bazel/bzlmod:extensions.bzl",
    "hex",
)

use_repo(
    hex,
    "hex",
)
